--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "firebase": "^9.23.0",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.22"
   },
   "engines": {
